// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`getPlaceholderImageMarkup\` if \`isImageLoaded\` is \`false\` should render the right structure 1`] = `
Array [
  <div
    style={
      Object {
        "paddingBottom": "undefined%",
      }
    }
  />,
  <Image
    as="img"
    fluid={false}
    src="anotherUrl"
    ui={true}
  >
    <img
      className="ui image"
      src="anotherUrl"
    />
  </Image>,
]
`;

exports[`\`getPlaceholderImageMarkup\` if \`isImageLoaded\` is \`true\` should render the right structure 1`] = `
<div
  style={
    Object {
      "paddingBottom": "undefined%",
    }
  }
/>
`;
